Backoffice: support custom `@Id` fields
Fixes #202